[gd_scene load_steps=52 format=3 uid="uid://c8e5kf24l6ul5"]

[ext_resource type="Texture2D" uid="uid://k4mi0rvd6prb" path="res://Assets/Images/healthBar-Sheet.png" id="1_g0moo"]
[ext_resource type="Script" path="res://Scripts/life_ui.gd" id="1_yyvhk"]
[ext_resource type="Texture2D" uid="uid://io58sdorg610" path="res://Assets/Images/mechArmorBit-Sheet.png" id="2_tk0gs"]
[ext_resource type="Texture2D" uid="uid://bstfxigebtlgu" path="res://Assets/Images/lifeBarEdge-Sheet.png" id="3_rh3jx"]
[ext_resource type="Script" path="res://Scripts/hp_light.gd" id="4_bsbyo"]
[ext_resource type="Texture2D" uid="uid://dl40o2ptl71f8" path="res://Assets/Images/mechArmorBitDisabled.png" id="5_hafdh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nekp3"]
atlas = ExtResource("1_g0moo")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv0un"]
atlas = ExtResource("1_g0moo")
region = Rect2(64, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxi4"]
atlas = ExtResource("1_g0moo")
region = Rect2(128, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo0iv"]
atlas = ExtResource("1_g0moo")
region = Rect2(192, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnttm"]
atlas = ExtResource("1_g0moo")
region = Rect2(256, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtxg7"]
atlas = ExtResource("1_g0moo")
region = Rect2(320, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ut8e"]
atlas = ExtResource("1_g0moo")
region = Rect2(384, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5yll"]
atlas = ExtResource("1_g0moo")
region = Rect2(448, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_37gib"]
atlas = ExtResource("1_g0moo")
region = Rect2(512, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur80n"]
atlas = ExtResource("1_g0moo")
region = Rect2(576, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhsh6"]
atlas = ExtResource("1_g0moo")
region = Rect2(640, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ows5n"]
atlas = ExtResource("1_g0moo")
region = Rect2(704, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2as1s"]
atlas = ExtResource("1_g0moo")
region = Rect2(768, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0na84"]
atlas = ExtResource("1_g0moo")
region = Rect2(832, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_we6y7"]
atlas = ExtResource("1_g0moo")
region = Rect2(896, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_le5di"]
atlas = ExtResource("1_g0moo")
region = Rect2(960, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwy25"]
atlas = ExtResource("1_g0moo")
region = Rect2(1024, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbixx"]
atlas = ExtResource("1_g0moo")
region = Rect2(1088, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_el8v0"]
atlas = ExtResource("1_g0moo")
region = Rect2(1152, 0, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_iywp1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nekp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv0un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo0iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnttm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtxg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ut8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5yll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37gib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur80n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhsh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ows5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2as1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0na84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we6y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le5di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwy25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbixx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el8v0")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_6vi1e"]
colors = PackedColorArray(0.403922, 0.560784, 0.25098, 1, 0, 0.1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qp8p7"]
gradient = SubResource("Gradient_6vi1e")
use_hdr = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bgrge"]
texture = SubResource("GradientTexture2D_qp8p7")

[sub_resource type="Gradient" id="Gradient_r6tak"]
offsets = PackedFloat32Array(0, 0.704819, 0.86747, 1)
colors = PackedColorArray(0.345098, 0.478431, 0.215686, 1, 1, 2.307, 0.271, 1, 2.505, 2.742, 0.557, 1, 3, 3, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1vyl6"]
gradient = SubResource("Gradient_r6tak")
use_hdr = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c2jg1"]
texture = SubResource("GradientTexture2D_1vyl6")

[sub_resource type="AtlasTexture" id="AtlasTexture_tghvv"]
atlas = ExtResource("3_rh3jx")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngyeu"]
atlas = ExtResource("3_rh3jx")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_wir73"]
atlas = ExtResource("3_rh3jx")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvuke"]
atlas = ExtResource("3_rh3jx")
region = Rect2(27, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_77amo"]
atlas = ExtResource("3_rh3jx")
region = Rect2(36, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhckd"]
atlas = ExtResource("3_rh3jx")
region = Rect2(45, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_jemus"]
atlas = ExtResource("3_rh3jx")
region = Rect2(54, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ewfh"]
atlas = ExtResource("3_rh3jx")
region = Rect2(63, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_8epue"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tghvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngyeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wir73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvuke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77amo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhckd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jemus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ewfh")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_kfnkn"]
offsets = PackedFloat32Array(0, 0.474747, 0.631313)
colors = PackedColorArray(1, 1, 1, 1, 0.0639999, 0.0639999, 0.0639999, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x7ote"]
gradient = SubResource("Gradient_kfnkn")
width = 8
height = 16
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_tmr2v"]
atlas = ExtResource("2_tk0gs")
region = Rect2(0, 0, 3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_oetxl"]
atlas = ExtResource("2_tk0gs")
region = Rect2(3, 0, 3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqk5h"]
atlas = ExtResource("2_tk0gs")
region = Rect2(6, 0, 3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsqpc"]
atlas = ExtResource("2_tk0gs")
region = Rect2(9, 0, 3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_61jxd"]
atlas = ExtResource("2_tk0gs")
region = Rect2(12, 0, 3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifu1"]
atlas = ExtResource("2_tk0gs")
region = Rect2(15, 0, 3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_c658p"]
atlas = ExtResource("2_tk0gs")
region = Rect2(18, 0, 3, 3)

[sub_resource type="SpriteFrames" id="SpriteFrames_47tuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hafdh")
}],
"loop": true,
"name": &"off",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmr2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oetxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqk5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsqpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61jxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c658p")
}],
"loop": true,
"name": &"on",
"speed": 10.0
}]

[node name="lifeUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yyvhk")

[node name="hpSlot" type="AnimatedSprite2D" parent="."]
clip_children = 2
position = Vector2(32, 0)
sprite_frames = SubResource("SpriteFrames_iywp1")
autoplay = "default"
frame_progress = 0.497006

[node name="hpBar" type="ProgressBar" parent="."]
clip_children = 2
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -5.0
offset_right = 60.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_bgrge")
theme_override_styles/fill = SubResource("StyleBoxTexture_c2jg1")
max_value = 4.0
value = 4.0
show_percentage = false

[node name="hpBarEdge" type="AnimatedSprite2D" parent="hpBar"]
self_modulate = Color(1, 2, 1, 1)
position = Vector2(55, 5)
scale = Vector2(1, 1.12)
sprite_frames = SubResource("SpriteFrames_8epue")
autoplay = "default"

[node name="hpLight" type="PointLight2D" parent="hpBar/hpBarEdge"]
visible = false
modulate = Color(2, 3, 1, 1)
z_index = 1
color = Color(3, 4, 1, 1)
energy = 2.0
texture = SubResource("GradientTexture2D_x7ote")
script = ExtResource("4_bsbyo")

[node name="Timer" type="Timer" parent="hpBar/hpBarEdge"]
wait_time = 0.5
one_shot = true

[node name="AP1" type="AnimatedSprite2D" parent="."]
position = Vector2(8.5, -4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.796517

[node name="AP2" type="AnimatedSprite2D" parent="."]
position = Vector2(14.5, -4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.703854

[node name="AP3" type="AnimatedSprite2D" parent="."]
position = Vector2(20.5, -4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.705463

[node name="AP4" type="AnimatedSprite2D" parent="."]
position = Vector2(25.5, -4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.979598

[node name="AP5" type="AnimatedSprite2D" parent="."]
position = Vector2(37.5, 4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.700816

[node name="AP6" type="AnimatedSprite2D" parent="."]
position = Vector2(43.5, 4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.60815

[node name="AP7" type="AnimatedSprite2D" parent="."]
position = Vector2(49.5, 4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.60976

[node name="AP8" type="AnimatedSprite2D" parent="."]
position = Vector2(54.5, 4.5)
sprite_frames = SubResource("SpriteFrames_47tuy")
animation = &"on"
autoplay = "on"
frame_progress = 0.88391
